src/test/deca/syntax/parser/valid/inst_expr_assign_empty.deca
// Test de parser, l'instruction est une expression sans assignation

{
    int x = 8;
    x;
}