src/test/deca/syntax/parser/invalid/decl_var_expr_ident_reserved_words_readfloat.deca
// Test de parser, l'ident n'est pas valide, mot réservé 
// true à la place

{
    int readFloat = 5;
}